# Sudoku_igra_Microsoft_Store

.github/workflows/: build.yml
Sudoku_igra/: CMakeLists.txt  Number_generator.cpp  Number_generator.h  RCa14468  README.md  Resource.rc  Sudoku_igra.cpp  Sudoku_igra.h  Sudoku_igra.sln  Sudoku_igra.vcxproj  Sudoku_igra.vcxproj.filters  main.cpp  main.h  resource.h
Sudoku_igra/.github/workflows/: cmake-multi-platform.yml
Windows Application Packaging Project/: Package.appxmanifest  Windows Application Packaging Project.wapproj
